--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,13 @@
         <ul class="portfolio-list list">
           <li class="portfolio-card">
             <a class="portfolio-link" href="">
-              <img src="./images/imgportfolio1.jpg" alt="Веб-сайт Технокряк" width="370">
+              <div class="wraper-overlay">
+                <img src="./images/imgportfolio1.jpg" alt="Веб-сайт Технокряк" width="370">
+                <p class="overlay-card">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+              
               <div class="card-description">
                 <h2 class="list-title">Технокряк</h2>
                 <p class="list-item">Веб-сайт</p>
