--- a/portfolio.html
+++ b/portfolio.html
@@ -109,11 +109,18 @@
 
             <li class="portfolio-card">
               <a class="portfolio-link" href="">
+                <div class="wraper-overlay">
                 <img
                   src="./images/imgportfolio2.jpg"
                   alt="Дизайн Постера New Orlean vs Golden Star"
                   width="370"
                 />
+                <p class="overlay-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу
+                  отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
                 <div class="card-description">
                   <h2 class="list-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -124,11 +131,18 @@
             </li>
             <li class="portfolio-card">
               <a class="portfolio-link" href="">
+                <div class="wraper-overlay">
                 <img
                   src="./images/imgportfolio3.jpg"
                   alt="Приложение Ресторан Seafood"
                   width="370"
                 />
+                <p class="overlay-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                  </div>
                 <div class="card-description">
                   <h2 class="list-title">
                     Ресторан <span lang="en">Seafood</span>
@@ -140,11 +154,18 @@
 
             <li class="portfolio-card">
               <a class="portfolio-link" href="">
+                <div class="wraper-overlay">
                 <img
                   src="./images/imgportfolio4.jpg"
                   alt="Маркетинг Проект Prime"
                   width="370"
                 />
+                <p class="overlay-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                  </div>
                 <div class="card-description">
                   <h2 class="list-title">
                     Проект <span lang="en">Prime</span>
@@ -156,11 +177,18 @@
 
             <li class="portfolio-card">
               <a class="portfolio-link" href="">
+                <div class="wraper-overlay">
                 <img
                   src="./images/imgportfolio5.jpg"
                   alt="Приложение Проект Boxes"
                   width="370"
                 />
+                <p class="overlay-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                  </div>
                 <div class="card-description">
                   <h2 class="list-title">
                     Проект <span lang="en">Boxes</span>
@@ -172,11 +200,18 @@
 
             <li class="portfolio-card">
               <a class="portfolio-link" href="">
+                <div class="wraper-overlay">
                 <img
                   src="./images/imgportfolio6.jpg"
                   alt="Веб-сайт Inspiration has no Borders"
                   width="370"
                 />
+                <p class="overlay-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                  </div>
                 <div class="card-description">
                   <h2 class="list-title" lang="en">
                     Inspiration has no Borders
@@ -188,11 +223,18 @@
 
             <li class="portfolio-card">
               <a class="portfolio-link" href="">
+                <div class="wraper-overlay">
                 <img
                   src="./images/imgportfolio7.jpg"
                   alt="Дизайн Издания Limited Edition"
                   width="370"
                 />
+                <p class="overlay-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                  </div>
                 <div class="card-description">
                   <h2 class="list-title">
                     Издание <span lang="en">Limited Edition</span>
@@ -204,11 +246,18 @@
 
             <li class="portfolio-card">
               <a class="portfolio-link" href="">
+                <div class="wraper-overlay">
                 <img
                   src="./images/imgportfolio8.jpg"
                   alt="Маркетинг Проект LAB"
                   width="370"
                 />
+                <p class="overlay-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                  </div>
                 <div class="card-description">
                   <h2 class="list-title">Проект <span lang="en">LAB</span></h2>
                   <p class="list-item">Маркетинг</p>
@@ -218,11 +267,18 @@
 
             <li class="portfolio-card">
               <a class="portfolio-link" href="">
+                <div class="wraper-overlay">
                 <img
                   src="./images/imgportfolio9.jpg"
                   alt="Приложение Growing Business"
                   width="370"
                 />
+                <p class="overlay-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                  </div>
                 <div class="card-description">
                   <h2 class="list-title" lang="en">Growing Business</h2>
                   <p class="list-item">Приложение</p>
@@ -304,3 +360,9 @@
     </footer>
   </body>
 </html>
+
+
+
+
+
+
