--- a/index.html
+++ b/index.html
@@ -138,27 +138,29 @@
           <h2 class="direction-title">Чем мы занимаемся</h2>
           <ul class="direction-list list">
             <li class="list-box">
-            <div class="direction-overlay">
-              <img src="./images/box1.jpg" alt="разработка приложений" width="370" />
-              <p class="direction-card-overlay">
-                Десктопні додатки
-              </p>
-            </div>
+              <div class="direction-overlay">
+                <img
+                  src="./images/box1.jpg"
+                  alt="разработка приложений"
+                  width="370"
+                />
+                <p class="direction-card-overlay">Десктопні додатки</p>
+              </div>
             </li>
             <li class="list-box">
               <div class="direction-overlay">
-              <img src="./images/box2.jpg" alt="разработка мобильных приложений" width="370" />
-              <p class="direction-card-overlay">
-              Мобільні додатки 
-              </p>
+                <img
+                  src="./images/box2.jpg"
+                  alt="разработка мобильных приложений"
+                  width="370"
+                />
+                <p class="direction-card-overlay">Мобільні додатки</p>
               </div>
             </li>
             <li class="list-box">
               <div class="direction-overlay">
                 <img src="./images/box3.jpg" alt="дизайн" width="370" />
-                <p class="direction-card-overlay">
-                  Дизайнерські рішення
-                </p>
+                <p class="direction-card-overlay">Дизайнерські рішення</p>
               </div>
             </li>
           </ul>
@@ -487,4 +489,3 @@
     <script src="./js/modal.js"></script>
   </body>
 </html>
-
